--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    text-decoration: none;
   }
+  @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 
   body {
-    font-family: Arial, sans-serif;
-    background-color: #fff;
-    line-height: 1.6;
-
+    font-family: "IBM Plex Sans Arabic", sans-serif;
+    font-weight: 500;
+    font-style: normal;
   }
 
 
@@ -61,7 +63,7 @@
 
 
     header {
-      padding: 20px 40px;
+      padding: 20px 40px ;
       background-color: #fff;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
       position: sticky;
@@ -75,7 +77,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      flex-wrap: wrap;
+
     }
 
     /* Logo styling */
@@ -85,19 +87,23 @@
       color: #6d2e8b;
       text-decoration: none;
     }
+    .logo{
+      width:10%;
+    }
 
     .logo a img {
-      width: 30%;
+      width: 100%;
       /* Adjust as needed */
     }
 
     /* Navigation styling */
     nav {
       display: flex;
-      gap: 30px;
+      gap: 17px;
       flex-wrap: wrap;
       align-items: center;
-    }
+    } 
+    
 
     nav a {
       color: #333;
